Add some accessibility text for hedvig wordmarks

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -34,13 +34,12 @@
             app:srcCompat="@drawable/ic_close"
             tools:visibility="visible" />
 
-        <!-- TODO: Content Description -->
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/hedvig_logo_margin_top"
-            android:contentDescription="@null"
+            android:contentDescription="@string/HEDVIG_LOGO_ACCESSIBILITY"
             android:tint="@color/icon_tint"
             app:srcCompat="@drawable/ic_hedvig_wordmark" />
 
