--- a/app/src/main/res/layout/activity_marketing.xml
+++ b/app/src/main/res/layout/activity_marketing.xml
@@ -32,12 +32,12 @@
         android:visibility="gone"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- TODO: Content Description -->
     <ImageView
         android:id="@id/marketing_hedvig_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:contentDescription="@string/HEDVIG_LOGO_ACCESSIBILITY"
         android:tint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
