--- a/app/src/main/res/drawable/button_border_purple.xml
+++ b/app/src/main/res/drawable/button_border_purple.xml
@@ -5,7 +5,7 @@
     tools:background="@color/white">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="@color/violet_200" />
+            <solid android:color="@color/link_purple" />
             <corners android:radius="112dp" />
         </shape>
     </item>
@@ -15,7 +15,7 @@
             android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/purple" />
+                android:color="@color/link_purple" />
             <corners android:radius="112dp" />
         </shape>
     </item>
