--- a/app/src/main/res/drawable/ic_back.xml
+++ b/app/src/main/res/drawable/ic_back.xml
@@ -1,6 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="17dp"
     android:height="16dp"
+    android:tint="@color/icon_tint"
     android:viewportWidth="17"
     android:viewportHeight="16">
   <path
