--- a/app/src/main/res/drawable/ic_chat_edit_last_message.xml
+++ b/app/src/main/res/drawable/ic_chat_edit_last_message.xml
@@ -6,7 +6,7 @@
   <path
       android:pathData="M12,12m-12,0a12,12 0,1 1,24 0a12,12 0,1 1,-24 0"
       android:strokeWidth="1"
-      android:fillColor="#651EFF"
+      android:fillColor="@color/link_purple"
       android:fillType="evenOdd"
       android:strokeColor="#00000000"/>
   <path
