--- a/app/src/main/res/layout/activity_charity.xml
+++ b/app/src/main/res/layout/activity_charity.xml
@@ -58,11 +58,11 @@
 
                         <TextView
                             android:id="@id/selectedCharityCardTitle"
-                            style="@style/Body.Regular.Emphasized"
+                            style="@style/Headline.Small"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/base_margin_double"
-                            android:layout_marginTop="@dimen/base_margin_triple"
+                            android:layout_marginTop="@dimen/base_margin_double"
                             android:layout_marginEnd="@dimen/base_margin_double"
                             tools:text="SOS Barnbyar" />
 
@@ -74,7 +74,7 @@
                             android:layout_marginStart="@dimen/base_margin_double"
                             android:layout_marginTop="@dimen/base_margin"
                             android:layout_marginEnd="@dimen/base_margin_double"
-                            android:layout_marginBottom="@dimen/base_margin_triple"
+                            android:layout_marginBottom="@dimen/base_margin_double"
                             tools:text="För att bli en trygg vuxen krävs en trygg barndom. Därför arbetar SOS Barnbyar med långsiktiga insatser för att inte ett enda barn ska behöva växa upp ensamt" />
 
                     </LinearLayout>
