--- a/app/src/main/res/layout/activity_coinsured.xml
+++ b/app/src/main/res/layout/activity_coinsured.xml
@@ -36,7 +36,7 @@
                     android:layout_width="160dp"
                     android:layout_height="160dp"
                     android:contentDescription="@null"
-                    android:tint="@color/purple"
+                    android:tint="@color/link_purple"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
