--- a/app/src/main/res/layout/chat_input_view.xml
+++ b/app/src/main/res/layout/chat_input_view.xml
@@ -23,8 +23,6 @@
             android:layout_marginStart="@dimen/base_margin_half"
             android:layout_marginEnd="@dimen/base_margin_half"
             android:layout_marginBottom="@dimen/base_margin"
-            android:background="@drawable/circle_background"
-            android:backgroundTint="@color/purple"
             android:contentDescription="@string/UPLOAD_FILE_BUTTON_HINT"
             android:src="@drawable/ic_chat_attach_file" />
 
@@ -37,7 +35,7 @@
             android:layout_marginEnd="@dimen/base_margin_half"
             android:layout_marginBottom="@dimen/base_margin_half"
             android:background="@drawable/circle_background"
-            android:backgroundTint="@color/purple"
+            android:backgroundTint="@color/link_purple"
             android:fontFamily="@font/circular_book"
             android:gravity="center"
             android:text="@string/GIF_BUTTON_TITLE"
