--- a/app/src/main/res/layout/chat_message_file_upload.xml
+++ b/app/src/main/res/layout/chat_message_file_upload.xml
@@ -24,7 +24,7 @@
             android:layout_gravity="end"
             android:layout_marginEnd="@dimen/base_margin_double"
             android:background="@drawable/chat_message_hedvig_ripple"
-            android:backgroundTint="@color/purple"
+            android:backgroundTint="@color/link_purple"
             android:drawableStart="@drawable/ic_file"
             android:drawablePadding="@dimen/base_margin_half"
             android:padding="12dp"
