--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/base_margin_double"
-                android:textColor="@color/purple"
+                android:textColor="@color/link_purple"
                 tools:text="@string/DASHBOARD_DIRECT_DEBIT_STATUS_NEED_SETUP_BUTTON_LABEL" />
 
         </LinearLayout>
@@ -158,7 +158,7 @@
                     android:layout_marginEnd="@dimen/base_margin_half"
                     android:fontFamily="@font/soray_extrabold"
                     android:includeFontPadding="false"
-                    android:textColor="@color/dark_purple"
+                    android:textColor="@color/text_emphasized"
                     android:textSize="@dimen/insurance_pending_countdown_text"
                     tools:text="23" />
 
@@ -180,7 +180,7 @@
                     android:layout_marginEnd="@dimen/base_margin_half"
                     android:fontFamily="@font/soray_extrabold"
                     android:includeFontPadding="false"
-                    android:textColor="@color/purple"
+                    android:textColor="@color/link_purple"
                     android:textSize="@dimen/insurance_pending_countdown_text"
                     tools:text="23" />
 
