--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">@color/purple</color>
     <color name="colorPrimaryDark">@color/dark_purple</color>
-    <color name="colorAccentLight">#1b73b4</color>
+    <color name="colorAccentLight">@color/violet_200</color>
     <color name="colorAccentDark">#FFFFFF</color>
     <color name="colorText">@color/off_white</color>
     <color name="colorLight">#F6F6F7</color>
