--- a/app/src/main/res/layout/activity_offer.xml
+++ b/app/src/main/res/layout/activity_offer.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_purple">
+    android:background="@color/offer_background"
+    tools:context=".feature.offer.OfferActivity">
 
     <include
         layout="@layout/loading_spinner"
@@ -15,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_gravity="top"
-        android:background="@color/dark_purple"
+        android:background="@color/offer_background"
         android:elevation="@dimen/toolbar_elevation"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         tools:layout_height="56dp">
@@ -35,16 +36,18 @@
                 tools:layout_marginStart="@dimen/base_margin_double">
 
                 <TextView
-                    style="@style/Headline.Medium.Negative"
+                    style="@style/Headline.Medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/OFFER_TITLE" />
+                    android:text="@string/OFFER_TITLE"
+                    android:textColor="@color/white" />
 
                 <TextView
                     android:id="@+id/offerToolbarAddress"
-                    style="@style/Body.Small.Negative"
+                    style="@style/Body.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/white"
                     tools:text="Storgatan 32" />
             </LinearLayout>
 
@@ -96,7 +99,6 @@
                 android:id="@+id/parallaxContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/dark_purple"
                 android:orientation="vertical">
 
                 <include layout="@layout/price_bubbles" />
@@ -115,15 +117,16 @@
                 app:srcCompat="@drawable/ic_arrow" />
 
             <TextView
-                style="@style/Headline.Medium.Negative"
+                style="@style/Headline.Medium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/base_margin_double"
-                android:background="@color/purple"
+                android:background="@color/link_purple"
                 android:gravity="center"
                 android:paddingTop="@dimen/base_margin_double"
                 android:paddingBottom="@dimen/base_margin_double"
-                android:text="@string/OFFER_SCROLL_HEADER" />
+                android:text="@string/OFFER_SCROLL_HEADER"
+                android:textColor="@color/white" />
 
             <include
                 android:id="@+id/homeSection"
@@ -154,21 +157,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/base_margin_triple"
-                android:background="@color/dark_purple"
+                android:background="@color/offer_background"
                 android:gravity="center"
                 android:text="@string/OFFER_GET_HEDVIG_TITLE" />
 
             <TextView
-                style="@style/Body.Regular.Negative"
+                style="@style/Body.Regular"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/dark_purple"
+                android:background="@color/offer_background"
                 android:gravity="center"
                 android:paddingStart="@dimen/base_margin_quadruple"
                 android:paddingTop="@dimen/base_margin"
                 android:paddingEnd="@dimen/base_margin_quadruple"
                 android:paddingBottom="@dimen/offer_bottom_padding"
-                android:text="@string/OFFER_GET_HEDVIG_BODY" />
+                android:text="@string/OFFER_GET_HEDVIG_BODY"
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
