--- a/app/src/main/res/values-v27/styles.xml
+++ b/app/src/main/res/values-v27/styles.xml
@@ -9,7 +9,14 @@
     <style name="Hedvig.Theme" parent="Hedvig.Theme.V27" />
 
     <style name="Hedvig.Theme.Offer">
-        <item name="android:statusBarColor">@color/dark_purple</item>
+        <item name="android:statusBarColor">@color/offer_background</item>
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:windowLightNavigationBar">false</item>
+    </style>
+
+    <style name="Hedvig.Theme.Marketing">
+        <item name="android:statusBarColor">@color/black</item>
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:navigationBarColor">@color/black</item>
         <item name="android:windowLightNavigationBar">false</item>
