--- a/app/src/main/res/drawable/dialog_background.xml
+++ b/app/src/main/res/drawable/dialog_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/off_white" />
+    <solid android:color="@color/background_elevation_1" />
     <corners android:radius="@dimen/dialog_background_radius" />
 </shape>
