--- a/app/src/main/res/drawable/chat_selectable.xml
+++ b/app/src/main/res/drawable/chat_selectable.xml
@@ -16,7 +16,7 @@
                     <stroke
                         android:width="1dp"
                         android:color="@color/link_purple" />
-                    <solid android:color="@color/background_elevation_1" />
+                    <solid android:color="@color/background" />
                 </shape>
             </item>
         </selector>
