--- a/app/src/main/res/layout/activity_trustly.xml
+++ b/app/src/main/res/layout/activity_trustly.xml
@@ -179,7 +179,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/base_margin_triple"
-                android:backgroundTint="@color/off_black_dark"
+                android:backgroundTint="@color/background_elevation_1"
                 android:text="@string/PROFILE_TRUSTLY_CLOSE"
                 app:layout_constraintBottom_toTopOf="@id/resultDoItLater"
                 app:layout_constraintEnd_toEndOf="parent"
