Fix even more things

--- a/app/src/main/res/layout/dialog_sign.xml
+++ b/app/src/main/res/layout/dialog_sign.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_rounded_corners"
@@ -21,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin"
         android:contentDescription="@null"
+        android:tint="@color/icon_tint"
         app:srcCompat="@drawable/ic_bank_id" />
 
 </LinearLayout>
