--- a/app/src/main/res/layout/promotion_code_dialog.xml
+++ b/app/src/main/res/layout/promotion_code_dialog.xml
@@ -34,8 +34,10 @@
         android:layout_marginTop="@dimen/base_margin_triple"
         android:layout_marginEnd="@dimen/base_margin_quadruple"
         android:background="@drawable/background_edit_text_rounded_corners"
+        android:fontFamily="@font/circular_book"
         android:hint="@string/REFERRAL_ADDCOUPON_INPUTPLACEHOLDER"
         android:imeOptions="actionDone"
+        android:importantForAutofill="no"
         android:inputType="textNoSuggestions"
         android:lines="1"
         android:padding="@dimen/base_margin_double"
