--- a/app/src/main/res/layout/dialog_authenticate.xml
+++ b/app/src/main/res/layout/dialog_authenticate.xml
@@ -38,6 +38,7 @@
         android:layout_marginEnd="@dimen/base_margin"
         android:layout_marginBottom="@dimen/base_margin_double"
         android:contentDescription="@null"
+        android:tint="@color/icon_tint"
         app:srcCompat="@drawable/ic_bank_id" />
 
 </LinearLayout>
