--- a/app/src/main/res/layout/referral_invite_row.xml
+++ b/app/src/main/res/layout/referral_invite_row.xml
@@ -78,6 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/base_margin"
+            android:textColor="@color/off_black"
             tools:text="-10 kr" />
 
         <ImageView
