--- a/app/src/main/res/values-night/colors_dark.xml
+++ b/app/src/main/res/values-night/colors_dark.xml
@@ -13,4 +13,5 @@
     <item name="link_purple" type="color">@color/violet_300</item>
     <item name="separator" type="color">@color/dark_mode_elevation_1</item>
     <item name="offer_background" type="color">@color/background</item>
+    <item name="foreground_gray" type="color">@color/light_gray</item>
 </resources>
