--- a/app/src/main/res/layout/referral_header.xml
+++ b/app/src/main/res/layout/referral_header.xml
@@ -11,7 +11,7 @@
     <com.hedvig.app.feature.referrals.ProgressTankView
         android:id="@+id/discountView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="@dimen/progress_tank_view_height"
         tools:visibility="gone" />
 
     <LinearLayout
