--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="android:windowBackground">@color/background</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:alertDialogTheme">@style/AlertDialog</item>
+        <item name="android:statusBarColor">@color/black</item>
     </style>
 
     <style name="Hedvig.Theme" parent="Hedvig.Theme.V21" />
