--- a/app/src/main/res/menu/profile_settings_menu.xml
+++ b/app/src/main/res/menu/profile_settings_menu.xml
@@ -4,9 +4,9 @@
     <!-- TODO: Add title with content description-->
     <item
         android:id="@+id/openSettings"
-        android:icon="@drawable/icon_failure"
+        android:icon="@drawable/ic_settings"
         android:orderInCategory="1"
-        android:title="@android:string/unknownName"
+        android:title="@string/SETTINGS_ACCESSIBILITY_HINT"
         app:iconTint="@color/icon_tint"
         app:showAsAction="always|withText" />
 </menu>
