--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,4 +10,12 @@
         <item>dark</item>
         <item>system_default</item>
     </string-array>
+    <string-array name="language_settings">
+        <item>@string/SETTINGS_LANGUAGE_SWEDISH</item>
+        <item>@string/SETTINGS_LANGUAGE_ENGLISH</item>
+    </string-array>
+    <string-array name="language_settings_values">
+        <item>sv-SE</item>
+        <item>en-SE</item>
+    </string-array>
 </resources>
