--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -13,4 +13,14 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory app:title="@string/SETTINGS_LANGUAGE_TITLE">
+
+        <ListPreference
+            app:entries="@array/language_settings"
+            app:entryValues="@array/language_settings_values"
+            app:useSimpleSummaryProvider="true"
+            app:key="language" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
