--- a/app/src/main/res/drawable/rounded_corners_background_light_gray.xml
+++ b/app/src/main/res/drawable/rounded_corners_background_light_gray.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="@dimen/dashboard_need_set_up_background_radius" />
-    <solid android:color="@color/light_gray" />
+    <solid android:color="@color/background_elevation_1" />
 </shape>
