--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -223,12 +223,13 @@
     </style>
 
     <style name="SmallButton">
-        <item name="android:paddingTop">4dp</item>
-        <item name="android:paddingBottom">4dp</item>
-        <item name="android:paddingStart">8dp</item>
-        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingTop">@dimen/base_margin_half</item>
+        <item name="android:paddingBottom">@dimen/base_margin_half</item>
+        <item name="android:paddingStart">@dimen/base_margin</item>
+        <item name="android:paddingEnd">@dimen/base_margin</item>
         <item name="android:background">@drawable/button_small</item>
         <item name="android:textAppearance">@style/Body.Small</item>
+        <item name="android:textColor">@color/off_black</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
