--- a/app/src/main/res/layout/common_claim_first_message.xml
+++ b/app/src/main/res/layout/common_claim_first_message.xml
@@ -16,7 +16,7 @@
         android:layout_height="@dimen/common_claim_icon_size"
         android:layout_marginStart="@dimen/base_margin_triple"
         android:contentDescription="@null"
-        tools:src="@drawable/icon_charity" />
+        tools:src="@drawable/ic_charity" />
 
     <TextView
         android:id="@+id/commonClaimFirstMessage"
